// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Skills/Sidebar should render activity sidebar 1`] = `
<React.Fragment>
  <SidebarNav
    hasActivityFeed={true}
    selectedView="activity"
  />
  <ActivitySidebar />
</React.Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render details sidebar 1`] = `
<React.Fragment>
  <SidebarNav
    hasDetails={true}
    selectedView="details"
  />
  <DetailsSidebar />
</React.Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render metadata sidebar 1`] = `
<React.Fragment>
  <SidebarNav
    hasMetadata={true}
    selectedView="metadata"
  />
  <Component />
</React.Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render no sidebar 1`] = `
<React.Fragment>
  <SidebarNav />
</React.Fragment>
`;

exports[`components/ContentSidebar/Skills/Sidebar should render skills sidebar 1`] = `
<React.Fragment>
  <SidebarNav
    hasSkills={true}
    selectedView="skills"
  />
  <Component />
</React.Fragment>
`;
